--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "AppSettings": {	
-    "Token": "super secret key"	
+  "AppSettings": {
+    "Token": "super secret key"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=datingapp.db"
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dhyeqvepg",
+    "ApiKey": "454739898941292",
+    "ApiSecret": "PHMpy6eM1lr53JDKmm07wlSot7U"
+  }
 }
